--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
     </div>
     <div class="navbar">
-        <a href="#github" id="github">Beranda</a>
+        <a href="#github" id="github">Github</a>
         <a href="#berita" id="berita">Berita</a>
         <a href="#tentang" id="tentang">Tentang</a>
         <a href="#kontak" id="kontak">Kontak</a>
