--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphic View</title>
+    <link rel="icon" href="https://raw.githubusercontent.com/nelsenpro/gravi.io/main/gravi.ico" type="image/x-icon">
     <script src="sweetalert2@11.js"></script>
     <style>
         body {
