--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
             background-color: #1a1a1a;
             color: #fff;
             margin: 0;
-            padding: 0;
+            padding: 5;
             display: flex;
             flex-direction: column;
             min-height: 100vh;
+            overflow: hidden;
         }
 
         .tradingview-widget-container {
@@ -77,7 +78,7 @@
             function loadWidget() {
                 new TradingView.widget({
                     "width": "100%",
-                    "height": 580,
+                    "height": 565,
                     "symbol": "FX_IDC:XAUUSD",
                     "interval": "1",
                     "timezone": "Etc/UTC",
