--- a/index.html
+++ b/index.html
@@ -198,5 +198,11 @@
             });
         });
     </script>
+    
+    <style>
+      #github, #berita, #tentang, #kontak {
+        color: magenta !important;
+      }
+    </style>
 </body>
 </html>
