--- a/index.html
+++ b/index.html
@@ -201,7 +201,8 @@
     
     <style>
       #github, #berita, #tentang, #kontak {
-        color: magenta !important;
+        color: yellow !important;
+        font-weight: bold;
       }
     </style>
 </body>
