--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </head>
 <body>
     <div class="tradingview-widget-container">
-        <h1> <i class="nelsen">Gra</i><i class="nelsen1">Vi</i> (XAU/USD)</h1>
+        <h1> <i class="nelsen">Gra</i><i class="nelsen1">Via</i> (XAU/USD)</h1>
         <div id="tradingview_1"></div>
         <script defer src="https://s3.tradingview.com/tv.js"></script>
         <script>
