--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 event.preventDefault();
                 Swal.fire({
                     title: 'Tentang',
-                    text: 'Gravi - Graphic View',
+                    text: 'Gravia - Graphic View Analytics',
                     iconHtml: 'ℹ️',
                     icon: 'info',
                     confirmButtonText: 'OK'
