--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Graphic View</title>
+    <title>Graphic View Analytics</title>
     <link rel="icon" href="https://raw.githubusercontent.com/nelsenpro/gravi.io/main/gravi.ico" type="image/x-icon">
     <script src="sweetalert2@11.js"></script>
     <style>
