--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphic View Analytics</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/nelsenpro/gravi.io/main/gravi.ico" type="image/x-icon">
+    <link rel="icon" href="https://raw.githubusercontent.com/nelsenpro/gravia/main/gravia.ico" type="image/x-icon">
     <script src="sweetalert2@11.js"></script>
     <style>
         body {
@@ -136,7 +136,7 @@
             &copy; <script>
                 document.write(new Date().getFullYear())
             </script>
-            <a href="https://github.com/nelsenpro" target="_blank" class="nelsen">Nelsen Niko</a> | Provided by <a href="https://www.tradingview.com/" target="_blank">TradingView</a>
+            <a href="https://github.com/nelsenpro/gravia" target="_blank" class="nelsen">Nelsen Niko</a> | Provided by <a href="https://www.tradingview.com/" target="_blank">TradingView</a>
         </div>
     </div>
     <div class="navbar">
@@ -158,7 +158,7 @@
                 event.preventDefault();
                 Swal.fire({
                     title: 'Github',
-                    html: 'Kunjungi <a href="https://github.com/nelsenpro/gravi.io" target="_blank">Github</a>',
+                    html: 'Kunjungi <a href="https://github.com/nelsenpro/gravia" target="_blank">Github</a>',
                     icon: 'info',
                     confirmButtonText: 'OK'
                 });
