--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
             color: black;
         }
     </style>
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1047085315509061"
+     crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="tradingview-widget-container">
