--- a/index.html
+++ b/index.html
@@ -71,8 +71,15 @@
     
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1047085315509061"
      crossorigin="anonymous"></script>
+     
+     <script async custom-element="amp-auto-ads"
+        src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
+</script>
 </head>
 <body>
+  <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-1047085315509061">
+</amp-auto-ads>
     <div class="tradingview-widget-container">
         <h1> <i class="nelsen">Gra</i><i class="nelsen1">Via</i> (XAU/USD)</h1>
         <div id="tradingview_1"></div>
