--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Graphic View Analytics</title>
-    <link rel="icon" href="https://raw.githubusercontent.com/nelsenpro/gravia/main/gravia.ico" type="image/x-icon">
+    <link rel="icon" href="https://github.com/nelsenpro/gravia/blob/main/gravi.ico" type="image/x-icon">
     <script src="sweetalert2@11.js"></script>
     <style>
         body {
